--- a/Content/site.css
+++ b/Content/site.css
@@ -134,6 +134,7 @@ div.rounded {
     color: rgb(255, 255, 255);
     background-color: rgb(133, 187, 101);
     border-color: rgb(110, 150, 80);
+	cursor: default;
 }
 .whoLabel{
     width:100px;
