^ adding transition to savings container on scroll with .3s ease

--- a/Content/site.css
+++ b/Content/site.css
@@ -40,6 +40,7 @@ a:focus {
 }
 .savings-placeholder, .savings-container{
     z-index:9999;
+    transition: all .3s linear;
 }
 .savings .savings-text,
 .savings .savings-amount {
