--- a/Content/site.css
+++ b/Content/site.css
@@ -38,14 +38,18 @@ a:focus {
     color: #fff;
     float: left;
 }
-.savings-placeholder, .savings-container{
+.savings-spaceholder {
+    position: relative;
+    margin-bottom: 100px;
+}
+.savings-spaceholder, .savings-container{
     z-index:9999;
     transition: all .3s linear;
 }
 .savings .savings-text,
 .savings .savings-amount {
-    margin-left: -15px;
-    margin-right: -15px;
+/*    margin-left: -15px;
+    margin-right: -15px;*/
     text-align: center;
 }
 .savings .savings-amount{
@@ -262,5 +266,9 @@ div.rounded {
     /*text-shadow: 0 2px 24px rgba(7, 8, 8, 0.75);*/
 }
 .btn {
+    color: #fff; 
     background-color: #F55B5B;
+}
+.btn:hover {
+    color: #fff;
 }
