--- a/Content/site.css
+++ b/Content/site.css
@@ -157,6 +157,9 @@ h4 {
     margin-bottom: 0;
     margin-top: 0;
 }
+.bernie-calc .jumbotron img {
+    margin: 0 auto;
+}
 .bernie-calc .cta {
     color: rgba(255,255,255,.6);
 }
