--- a/Content/site.css
+++ b/Content/site.css
@@ -82,13 +82,14 @@ label,b,strong {
     font-size: 150%;
     box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.06);
 }
-.savings>div:last-child {
+/* .savings>div:last-child {
     margin-bottom: 20px;
-}
+} */
 .savings-nobottommargin>div:last-child{
   margin-bottom: 0px !important;
 }
-.savings > div > div {
+.savings > div > div,
+.savings-spaceholder .savings > div {
     text-transform: uppercase;
     padding: 5px 0;
 }
@@ -103,13 +104,10 @@ label,b,strong {
 .disclaimer a {
     text-decoration: underline;
 }
-.savings > div:last-child {
+/* .savings > div:last-child {
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-}
-.savings {
-
-}
+} */
 .floating {
     position: fixed;
     top: 100px;
@@ -329,7 +327,7 @@ div.rounded {
 	.advanced {
 		display:none;
 	}
-	.form-group { margin-right:15px }
+	.form-group { margin-right:15px; margin-left:25px; }
 
 	.form-group label { line-height:29px; }
 
@@ -369,16 +367,19 @@ div.rounded {
     float: left;
     position: relative;
 }
+.result, 
 .social {
     padding: 0;
-    z-index: 9999;
+    z-index: 999;
 }
+.result li, 
 .social li {
     list-style: none;
 }
 #fa-facebook {
     color: #3a5795;
 }
+.result .box,
 .social .box{
     width: 100%;
     display: block;
@@ -591,5 +592,14 @@ footer p {
 .btn-sharelink:hover{
 
     background-color: #f40634;
+    color:#fff;
+}
+.btn-email{
+    background-color: #fff;
+    color:grey;
+}
+.btn-email:hover{
+
+    background-color: grey;
     color:#fff;
 }
